test/expected/explain_sb.out
explain signed bool x
        ^
9: error: "signed _Bool" is illegal for built-in type
